about - added vice video

--- a/about.html
+++ b/about.html
@@ -300,6 +300,14 @@
 								The Zizi Show (6 min),</a> Mini-doc | dir Tom Francome, 2021
 						</p>
 						<p>
+							<a id=show target="_blank" href="https://youtu.be/xFvUJxhIakw?si=9nPp7BR5rCJDSwK0">▷ Jake
+								Elwes and Me the Drag Queen answer 10 questions about The Zizi Project (6 min),</a> 2021
+						</p>
+						<p>
+							<a id=show target="_blank" href="https://youtu.be/jggMX0G-MUI">▷ Is AI bad for Artists? Jake
+								Elwes - VICE UK Q&A (8 min),</a> 2023
+						</p>
+						<p>
 							<a id=show target="_blank" href="https://www.youtube.com/watch?v=5kS59JagNFY">▷ CUSP in Kill
 								Your TV (6 min),</a> BBC4 Video Art Documentary (UK TV), 2019
 						</p>
@@ -310,10 +318,6 @@
 						<p>
 							<a id=show target="_blank" href="https://www.youtube.com/watch?v=NwIhejF4_zE">▷ Zizi and Me
 								(4 min),</a> Mini-doc | dir Chenxuan Wang, 2021
-						</p>
-						<p>
-							<a id=show target="_blank" href="https://youtu.be/xFvUJxhIakw?si=9nPp7BR5rCJDSwK0">▷ Jake
-								Elwes and Me the Drag Queen answer 10 questions about The Zizi Project (6 min),</a> 2021
 						</p>
 						<p>
 							<a id=show target="_blank" href="https://www.youtube.com/watch?v=qQSSl533rb8">▷ Screen Walk
@@ -882,16 +886,16 @@
 					<br>
 
 					<h4>Prizes</h4>
-					<p><a id=show target="_blank"
-						href="https://calls.ars.electronica.art/2022/prix/winners/9213/">Prix Ars Electronica - Interactive Art + (Honorary Mention)</a>, 2022 </p>
+					<p><a id=show target="_blank" href="https://calls.ars.electronica.art/2022/prix/winners/9213/">Prix
+							Ars Electronica - Interactive Art + (Honorary Mention)</a>, 2022 </p>
 
-					<p><a id=show target="_blank"
-						href="https://kicamp.org/ki-newcomerinnen/kandidatinnen">German Informatics Society: AI Newcomer Award, Art Category,</a> 2021</p>
-					
+					<p><a id=show target="_blank" href="https://kicamp.org/ki-newcomerinnen/kandidatinnen">German
+							Informatics Society: AI Newcomer Award, Art Category,</a> 2021</p>
+
 					<p><a id=show target="_blank" href="https://www.lumenprize.com/2021-shortlist">Lumen Prize, Futures
 							Award Shortlist,</a> 2021</p>
-					<p>Lumen Prize, Moving Image Shortlist, 2018</p> 
-					<p>UCL Arts & Humanities Dean’s List, 2017</p> 
+					<p>Lumen Prize, Moving Image Shortlist, 2018</p>
+					<p>UCL Arts & Humanities Dean’s List, 2017</p>
 					<p>Julian Sullivan Prize for outstanding achievement in Media Art, 2017 </p>
 					<p>Top UK candidate for Cambridge Pre-U Art and Design, 2012</p>
 					<br>
