--- a/index.html
+++ b/index.html
@@ -141,27 +141,15 @@
 
 	<section id="works" class="">
 		<div class="container">
-
-			<a href="project-zizi-vam.html" class="permalink">
+			
+			<a href="project-doomscroll.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-zizi-VAM.jpg" alt="Jake Elwes digital artist" />
+						<img src="images/project-doomscroll.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>The Zizi Show - A Deepfake Drag Cabaret at the V&amp;A						</h3>
+						<h3>DoomScroll</h3>
 
-						<span style="display:block" class="category">multi-channel video, 2023</span>
-					</div>
-				</div>
-			</a>
-
-			<a href="project-zizimotion.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-ZiziMotion.jpg" alt="Jake Elwes digital artist" />
-
-						<h3>Zizi in Motion: A Deepfake Drag Utopia</h3>
-
-						<span style="display:block" class="category"><b>(Movement by Wet Mess)</b>, video series, 2023</span>
+						<span style="display:block" class="category">print and video, 2023</span>
 					</div>
 				</div>
 			</a>
@@ -178,7 +166,31 @@
 				</div>
 			</a>
 
+			<a href="project-zizi-vam.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-zizi-VAM.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>The Zizi Show - A Deepfake Drag Cabaret at the V&amp;A						</h3>
+
+						<span style="display:block" class="category">multi-channel video, 2023</span>
+					</div>
+				</div>
+			</a>
+
 			<div class="clear hide-under-tablet"></div>
+
+			<a href="project-zizimotion.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-ZiziMotion.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>Zizi in Motion: A Deepfake Drag Utopia</h3>
+
+						<span style="display:block" class="category"><b>(Movement by Wet Mess)</b>, video series, 2023</span>
+					</div>
+				</div>
+			</a>
 
 			<a href="project-zizi-show.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -203,6 +215,7 @@
 				</div>
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
 
 			<a href="project-zizi-2019.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -214,9 +227,6 @@
 					</div>
 				</div>
 			</a>
-
-			<div class="clear hide-under-tablet"></div>
-
 
 			<a href="project-cusp.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -240,7 +250,7 @@
 				</div>
 			</a>
 
-
+			<div class="clear hide-under-tablet"></div>
 
 			<a href="project-closedLoop.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -253,9 +263,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
-
-
 			<a href="project-latentSpace.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -266,7 +273,6 @@
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
-
 
 			<a href="project-DaDaTa.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -279,7 +285,7 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-
+			<div class="clear hide-under-tablet"></div>
 
 			<a href="project-digitalWhisper.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -292,9 +298,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
-
-
 			<a href="project-AutoEncodedBuddha.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -305,8 +308,6 @@
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
-
-
 
 			<a href="project-MLPorn.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -319,7 +320,7 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-
+			<div class="clear hide-under-tablet"></div>
 
 			<a href="project-digitalTouch.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -332,9 +333,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
-
-
 			<a href="project-circuit.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -345,8 +343,6 @@
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
-
-
 
 			<a href="project-iPhoneTouch.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -359,7 +355,7 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-
+			<div class="clear hide-under-tablet"></div>
 
 			<a href="project-pornCircles.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -372,9 +368,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
-
-
 			<a href="project-lineForWalk.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -385,7 +378,6 @@
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
-
 
 
 			<!-- Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="cv.pdf">CV PDF</a> -->
