sticky sidebar not scrolling bug

--- a/project-circuit.html
+++ b/project-circuit.html
@@ -79,7 +79,7 @@
 
 			<div class="desktop-3 push-9 tablet-12 tablet-push-0 nested columns">
 
-				<div class="sidebar sticky">
+				<div class="sidebar">
 
 					<div class="desktop-3 tablet-12 columns">
 
