--- a/blankLeft.html
+++ b/blankLeft.html
@@ -64,7 +64,7 @@
 
 			<div class="desktop-3 tablet-12 nested columns">
 
-				<div class="sidebar sticky">
+				<div class="sidebar">
 
 					<div class="desktop-3 tablet-12 columns">
 
