--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -86,7 +86,7 @@
 
 			<div class="desktop-3 push-6 tablet-12 tablet-push-0 nested columns">
 
-				<div class="sidebar sticky">
+				<div class="sidebar">
 
 					<div class="desktop-6 tablet-12 columns">
 
