--- a/project-oakComputer.html
+++ b/project-oakComputer.html
@@ -88,7 +88,7 @@
 
 				<!-- <div class="desktop-3 tablet-12 nested columns"> -->
 
-				<div class="sidebar sticky">
+				<div class="sidebar">
 
 					<div class="desktop-6 tablet-12 columns">
 
