update about - anchors and image split

--- a/about.html
+++ b/about.html
@@ -147,18 +147,48 @@
 				Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. -->
 				<img src="images/Jake Elwes Portrait.jpg" alt="official portrait of british media artist jake elwes">
 
+				<ul class="anchors">
+					<li><a href="#bio" class="anchor">Artist Bio</a></li>
+					<li><a href="#background" class="anchor">Background</a></li>
+					<li><a href="#selectedtalks" class="anchor">Selected Talks / Videos</a></li>
+					<li><a href="#currentshows" class="anchor">Current/Upcoming Exhibtions</a></li>
+					<li><a href="#soloshows" class="anchor">Selected Solo Exhibitions and Installations</a></li>
+					<li><a href="#groupshows" class="anchor">Selected Group Exhibitions and Projects</a></li>
+					<li><a href="#performances" class="anchor">Performances</a></li>
+					<li><a href="#prizes" class="anchor">Prizes &amp; Collections</a></li>
+					<li><a href="#press" class="anchor">Articles / Press / TV</a></li>
+					<li><a href="#pub" class="anchor">Research - Publications / Book / Interviews / Academia</a></li>
+					<li><a href="#talks" class="anchor">Talks / Conferences / Workshops</a></li>
 
-				<p style="margin-top:35px;">
+				</ul>
 
 
-					Jake Elwes (b.1993) is an artist living and working in London. They studied at The Slade School
+
+
+				<p id="bio" style="margin-top:35px;">
+
+
+					Jake Elwes (b.1993, UK) is an artist living and working in London currently working to queer
+					artificial intelligence with drag performers. Having been making art exploring the aesthetics and
+					ethics of machine learning systems since the very first generative models in 2016, their art
+					searches for poetry and narrative in the success and failures of digital systems. Across projects
+					that encompass moving-image installation, sound and performance, Jake’s work finds unusual ways of
+					demystifying, mapping and subverting technology. Works include deepfake drag in The Zizi Project,
+					glitching oppressive algorithms in Machine Learning Porn and reframing AI generated marsh birds back
+					into nature with CUSP. Jake’s work also calls for us to challenge who’s building these systems and
+					who (or what) they’re building them for, and whether we as artists and queers can reclaim these
+					technologies to build our own digital utopias.
+
+
+
+					<!-- 2023.. Jake Elwes (b.1993) is an artist living and working in London. They studied at The Slade School
 					of Fine Art, UCL (2013-17). Searching for poetry and narrative in the success and failures of AI
 					systems, Jake Elwes investigates the aesthetics and ethics inherent to AI. Elwes’ practice makes use
 					of the sophistication of machine learning, while finding illuminating qualities in its limitations.
 					Across projects that encompass moving-image installation, sound and performance, Elwes seeks to
 					queer datasets, demystifying and subverting predominantly cisgender and straight AI systems. While
 					it may seem like the AI is a creative collaborator, Elwes is careful to point out that the AI has
-					neither intentionality or agency; it is a neutral agent existing within a human framework.
+					neither intentionality or agency; it is a neutral agent existing within a human framework. -->
 
 
 					<!-- Jake Elwes is a media artist living and working in London. They studied at The Slade School of Fine
@@ -180,17 +210,21 @@
 					Recent works explore A.I. bias by queering datasets using drag performers. -->
 
 
-					<br><br>Jake's work has been exhibited in museums and galleries internationally, including the
-					Victoria and Albert Museum, London; Somerset House, London; ZKM, Karlsruhe, Germany; Today Art
-					Museum, Beijing; Yuz Museum, Shanghai; Pinakothek der Moderne, Munich; Frankfurter Kunstverein;
-					Fotomuseum Winterthur, Switzerland; Honor Fraser Gallery, LA; Fundacion Telefonica Museum, Madrid;
-					Ars Electronica, Austria; Zabludowicz Collection, London; Sculpture in the City, London; Science
-					Gallery Dublin; RMIT Gallery, Melbourne; Onassis Foundation, Athens; Arebyte Gallery, London; E-WERK
-					Freiburg, Germany; Museum für Naturkunde, Berlin; Nature Morte, Delhi, India; Centre for the Future
-					of Intelligence, UK and they have been featured on TV: ZDF aspekte (Germany) and the BBC Arts (UK).
+					<br><br>
+
+					Jake studied at The Slade School of Fine Art, UCL (2013-17) and their work has been exhibited in
+					museums and galleries internationally, including the Victoria and Albert Museum, London; Pinakothek
+					der Moderne, Munich; Somerset House, London; ZKM, Karlsruhe; Today Art Museum, Beijing; Frankfurter
+					Kunstverein; Fotomuseum Winterthur, Switzerland; Honor Fraser Gallery, LA; Fundacion Telefonica
+					Museum, Madrid; Ars Electronica, Austria; Zabludowicz Collection, London; Sculpture in the City,
+					London; Science Gallery Dublin; RMIT Gallery, Melbourne; Onassis Foundation, Athens; E-WERK
+					Freiburg, Germany; Museum für Naturkunde, Berlin; Nature Morte, Delhi; Centre for the Future of
+					Intelligence, Cambridge and they have been featured on BBC1’s Kill Your TV - History of Video Art
+					and BBC Radio 4 Front Row (UK) and ZDF aspekte, ARD ttt (DE).
 
 				</p>
-
+				<br>
+				<div class="border-top"></div>
 				<p>
 					Currently represented in Europe, Middle East & Asia by:<br>
 					<b><i><a id=show target="_blank"
@@ -214,10 +248,10 @@
 				<!-- <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> |  -->
 				<a id=show target="_blank" href="JElwes-CV.pdf">CV PDF, May 2023</a>
 				<br><br>
-				<a id=show target="_blank" href="https://en.wikipedia.org/wiki/Jake_Elwes">Wikipedia</a> |
 				<a id=show target="_blank"
 					href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">V&amp;A Museum</a>
 				|
+				<a id=show target="_blank" href="https://en.wikipedia.org/wiki/Jake_Elwes">Wiki Article</a> |
 				<a id=show target="_blank" href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli Art
 					House</a> |
 				<a id=show target="_blank"
@@ -273,7 +307,7 @@
 			<div class="container">
 
 				<div class="desktop-12 tablet-12 columns">
-					<h4>Background</h4>
+					<h4 id="background">Background</h4>
 					<p>
 						Born 1993, London UK. <br><br>
 
@@ -289,8 +323,10 @@
 					</p>
 					<br>
 					<div class="shows">
-						<h4>Selected Talks / Videos</h4>
-						<img src="images/talks.jpg" alt="talks by jake elwes">
+						<h4 id="selectedtalks">Selected Talks / Videos</h4>
+						<br>
+						<img src="images/about-talks.jpg" class="aboutimg" alt="talks by jake elwes">
+						<img src="images/about-talks2.jpg" class="aboutimg" alt="talks by jake elwes">
 						<p>
 							<a id=show target="_blank" href="https://vimeo.com/814675732/ad9c648c6d">▷ Deepfake Drag:
 								Queering AI in Art (15 min + Q&amp;A),</a> CPH:DOX Talk, 2023
@@ -336,7 +372,7 @@
 						<br>
 
 
-						<h4>Current/Upcoming Exhibtions</h4>
+						<h4 id="currentshows">Current/Upcoming Exhibtions</h4>
 						<p>
 							<b>25th May 2023 - 20th April 2024</b> - <a id=show target="_blank"
 								href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">The
@@ -380,7 +416,7 @@
 						<br>
 						<br>
 
-						<h4>Selected Solo Exhibitions and Installations</h4>
+						<h4 id="soloshows">Selected Solo Exhibitions and Installations</h4>
 
 						<p>
 							<b>2023</b> -
@@ -435,12 +471,13 @@
 						<br>
 						<br>
 
-						<img src="images/shows.jpg" alt="exhibtions by jake elwes">
 						<br>
+						<img src="images/about-shows.jpg" class="aboutimg" alt="talks by jake elwes">
+						<img src="images/about-shows2.jpg" class="aboutimg" alt="talks by jake elwes"> <br>
 						<br>
 
 
-						<h4>Selected Group Exhibitions and Projects</h4>
+						<h4 id="groupshows">Selected Group Exhibitions and Projects</h4>
 
 						<p>
 							<b>2023</b>
@@ -453,7 +490,9 @@
 							</a> <b>Somerset House (2022-2023)</b>, London, UK
 						</p>
 						<p>
-							<a id=show target="_blank" href="https://honorfraser.com/?s=current&eid=199">Make Me Feel
+							<a id=show target="_blank"
+								href="https://honorfraser.com/programming/make-me-feel-mighty-real-drag-tech-and-the-queer-avatar-1969-2023/">Make
+								Me Feel
 								Mighty Real: Drag/tech
 								And
 								The Queer Avatar,
@@ -838,10 +877,11 @@
 						<br>
 					</div>
 
-					<h4>Performances</h4>
+					<h4 id="performances">Performances</h4>
 
 					<br>
-					<img src="images/perfomances.jpg" alt="exhibtions by jake elwes">
+					<img src="images/about-perfomances.jpg" class="aboutimg" alt="talks by jake elwes">
+					<img src="images/about-perfomances2.jpg" class="aboutimg" alt="talks by jake elwes">
 					<br>
 					<p>
 						<b>2023</b><br>
@@ -885,7 +925,7 @@
 					</p>
 					<br>
 
-					<h4>Prizes</h4>
+					<h4 id="prizes">Prizes</h4>
 					<p><a id=show target="_blank" href="https://calls.ars.electronica.art/2022/prix/winners/9213/">Prix
 							Ars Electronica - Interactive Art + (Honorary Mention)</a>, 2022 </p>
 
@@ -899,13 +939,17 @@
 					<p>Julian Sullivan Prize for outstanding achievement in Media Art, 2017 </p>
 					<p>Top UK candidate for Cambridge Pre-U Art and Design, 2012</p>
 					<br>
-					<h4>Collections</h4>
+
+
+					<h4 id="coll">Collections</h4>
 					<p>
+						V&amp;A | Victoria and Albert Museum of Art and Design, London <br>
 						ZKM | Center for Art and Media, Karlsruhe<br>
 						Zabludowicz Collection, London<br>
 						<br>
 					</p>
-					<h4>Television</h4>
+
+					<h4 id="tv">Television</h4>
 					<p>
 						BBC FOUR; <a id=show target="_blank"
 							href="https://www.bbc.co.uk/iplayer/episode/m000bpjw/kill-your-tv-jim-moirs-weird-world-of-video-art">'Kill
@@ -932,7 +976,7 @@
 					</p> -->
 
 					<div class="shows">
-						<h4>Articles/Press</h4>
+						<h4 id="press">Articles/Press</h4>
 						<br>- being updated - <br>
 						<p>
 							November 2023,
@@ -1410,77 +1454,79 @@
 						</p>
 					</div>
 
-					<h4>Interview PDFs (for reference purposes)</h4>
-					<p>
-						<a id=show target="_blank" href="/interviews/Wallpaper China.pdf">Wallpaper China, 2021.
-							(PDF)</a> <br>
-						<a id=show target="_blank" href="/interviews/NOWRE Interview.pdf">NOWRE China, 2021. (PDF)</a>
-						<br>
-						<a id=show target="_blank"
-							href="https://medium.com/@jesspldn/jake-elwes-the-key-question-here-is-about-consent-f6b6f99ce1d4">Jess
-							Poon,
-							University of Glasgow, 2021. (PDF)</a> <br>
-						<a id=show target="_blank" href="/interviews/Flash Art.pdf">Alex Estorick &amp; Beth Jochim,
-							Flash Art, 2020. (PDF)</a> <br>
-						<a id=show target="_blank" href="/interviews/Zabs Invites.pdf">'CUSP',
-							Zabludowicz: Interview with Jake Elwes and Curator Maitreyi Maheshwari, 2019. (PDF)</a> <br>
-						<a id=show target="_blank" href="/interviews/Maria Redaelli.pdf">Maria Redaelli,
-							Università Ca' Foscari Venezia, 2020. (PDF)</a> <br>
-						<a id=show target="_blank" href="/interviews/Artsy.pdf">Artsy, Sam Gaskin, 2018. (PDF)</a> <br>
-						<a id=show target="_blank" href="/interviews/NYTimes.pdf">New York Times, Gabe Cohn, 2018.
-							(PDF)</a> <br>
 
-						<a id=show target="_blank" href="/interviews/FastCompany.pdf">Fast Company, DJ Pangburn, 2018.
-							(PDF)</a> <br>
-						<!-- <a id=show target="_blank"
-							href="https://howtospendit.ft.com/art-philanthropy/205746-artificial-intelligence-the-art-world-s-weird-and-wonderful-new-medium">Francesca
-							Gavin, Financial Times.</a> <br> -->
+					<h4 id="tv">Television</h4>
+					<p>
+						BBC FOUR; <a id=show target="_blank"
+							href="https://www.bbc.co.uk/iplayer/episode/m000bpjw/kill-your-tv-jim-moirs-weird-world-of-video-art">'Kill
+							Your TV: Jim Moir’s Weird World Of Video Art'</a> Sunday 24 November 2019 - <a id=show
+							target="_blank" href="https://youtu.be/5kS59JagNFY">Watch Here</a>
+						<br>
+						ZDF aspekte; <a id=show target="_blank" href="https://youtu.be/7UvzxiU3OB8">'Künstliche
+							Intelligenz: Unser Leben mit denkenden Maschinen'</a> Friday 12 March 2021 - <a id=show
+							target="_blank" href="https://youtu.be/7UvzxiU3OB8">Watch Here</a>
+						<br>
+						BBC London News;<a id=show target="_blank"
+							href="https://www.bbc.co.uk/news/av/uk-england-london-65715507">
+							Jake Elwes V&A: 'I want to make photo art more accessible'</a> Sunday 28 May 2023
+						<br>
 						<br>
 					</p>
 
-					<h4>Publications, Research &amp; Academia</h4>
+
+					<h4 id="pub">Publications, Books, Research &amp; Academia</h4>
 					<p>
 						- being updated -
+
+						<p>
+
+							Agnieszka Roguski (2023), <b>Algorithmic Drag: Mimicry and Digital Staging of the Self in Jake Elwes' Zizi - Queering the Dataset</b>, in <i>Glitch. The Art of Interference.</i> ed. Franziska Kunze, Pinakothek Catalogue, DISTANZ Verlag, ISBN: 978-3-95476-600-0
+						</p>
 					<p>
-						Parslow, Joe (2024) <b>
+						Joe Parslow (2023), <a id=show target="_blank" href="https://www.tandfonline.com/doi/full/10.1080/10486801.2023.2173592"><b>
 							Kings, Queens, Monsters and Things: Digital Drag Performance and Queer Moves
 							in Artificial Intelligence (AI).
-						</b> Contemporary Theatre Review Print ISSN 1048-6801 Online ISSN
-						1477-2264. (In Press)
+						</b></a> Contemporary Theatre Review Print ISSN 1048-6801 Online ISSN
+						1477-2264. 
+						(view here</a>)
 					</p>
 					<p>
-						Parslow, Joe (2023) <b>Jake Elwes: Queering Artificial Intelligence with Deepfake Drag.</b> In:
+						Joe Parslow (2023), <b>Jake Elwes: Queering Artificial Intelligence with Deepfake Drag.</b> In:
 						Among
 						the Machines. Zablubowicz Collection, London, pp. 85-91. ISBN 978-1-907-931-40-7
 					</p>
 					<p>
 						Drew Hemment, Morgan Currie, SJ Bennett, Jake Elwes, Anna Ridler, Caroline Sinders, Matjaz
-						Vidmar, Robin Hill, and Holly Warner. 2023. <b>AI in the Public Eye:
+						Vidmar, Robin Hill, and Holly Warner (2023), <a id=show target="_blank" href="https://doi.org/10.1145/3593013.3594052"><b>AI in the Public Eye:
 							Investigating Public AI
 							Literacy Through AI Art.
-						</b> In Proceedings of the 2023 ACM Conference on Fairness, Accountability,
+						</b></a> In Proceedings of the 2023 ACM Conference on Fairness, Accountability,
 						and Transparency (FAccT '23). Association for Computing Machinery, New York, NY, USA, 931–942.
-						https://doi.org/10.1145/3593013.3594052
 					</p>
 					<p>
 						Hemment, D., Zeilinger, M., Vidmar, M., Elwes, J., Warner, H., Pérez, D. S., & Hill, R. (2022).
-						<b>Towards a heuristic model for experiential AI: analysing the Zizi Show in the new real.</b>
+						<a id=show target="_blank" href="https://doi.org/doi.org/10.21606/drs.2022.808"><b>Towards a heuristic model for experiential AI: analysing the Zizi Show in the new real.</b></a>
 						D.
 						Lockton, S. Lenzi, P. Hekkert, A. Oak, J. Sadaba, & P. Lloyd (Eds.), Proceedings of DRS2022
 						Bilbao: Design Research Society International Conference (DRS Biennial Conference Series).
 						Design Research Society. Advance online publication.
-						https://doi.org/doi.org/10.21606/drs.2022.808
+					
 					</p>
 					<p>
-						Owen Perry (2021). <b>The Zizi Show review</b>, Volupté: Interdisciplinary Journal of Decadence
+						Owen Perry (2021). <b>The Zizi Show review</b></a>, Volupté: Interdisciplinary Journal of Decadence
 						Studies.
 						Goldsmiths, London
+						(view )
+
+						
 					</p>
 					<p>
-						Anne Ploin, Eynon, R., Hjorth I. & Osborne, M.A. (2022). <b>
+						Anne Ploin, Eynon, R., Hjorth I. & Osborne, M.A. (2022). <a id=show target="_blank" href="https://www.oii.ox.ac.uk/news-events/reports/ai-the-arts/"><b>
 							AI and the Arts: How Machine Learning
 							is Changing Artistic Work.
-						</b>. Oxford Internet Institute, University of Oxford, UK
+						</b></a>. Oxford Internet Institute, University of Oxford, UK
+						(view here</a>)
+
 					</p>
 					<p>
 						Cristina Voto, (2022). <b>From Archive to Dataset. Visualizing the latency of facial big
@@ -1592,10 +1638,39 @@
 
 					</p>
 
+					<h4>Interview PDFs (for reference purposes)</h4>
+					<p>
+						<a id=show target="_blank" href="/interviews/Wallpaper China.pdf">Wallpaper China, 2021.
+							(PDF)</a> <br>
+						<a id=show target="_blank" href="/interviews/NOWRE Interview.pdf">NOWRE China, 2021. (PDF)</a>
+						<br>
+						<a id=show target="_blank"
+							href="https://medium.com/@jesspldn/jake-elwes-the-key-question-here-is-about-consent-f6b6f99ce1d4">Jess
+							Poon,
+							University of Glasgow, 2021. (PDF)</a> <br>
+						<a id=show target="_blank" href="/interviews/Flash Art.pdf">Alex Estorick &amp; Beth Jochim,
+							Flash Art, 2020. (PDF)</a> <br>
+						<a id=show target="_blank" href="/interviews/Zabs Invites.pdf">'CUSP',
+							Zabludowicz: Interview with Jake Elwes and Curator Maitreyi Maheshwari, 2019. (PDF)</a> <br>
+						<a id=show target="_blank" href="/interviews/Maria Redaelli.pdf">Maria Redaelli,
+							Università Ca' Foscari Venezia, 2020. (PDF)</a> <br>
+						<a id=show target="_blank" href="/interviews/Artsy.pdf">Artsy, Sam Gaskin, 2018. (PDF)</a> <br>
+						<a id=show target="_blank" href="/interviews/NYTimes.pdf">New York Times, Gabe Cohn, 2018.
+							(PDF)</a> <br>
+
+						<a id=show target="_blank" href="/interviews/FastCompany.pdf">Fast Company, DJ Pangburn, 2018.
+							(PDF)</a> <br>
+						<!-- <a id=show target="_blank"
+							href="https://howtospendit.ft.com/art-philanthropy/205746-artificial-intelligence-the-art-world-s-weird-and-wonderful-new-medium">Francesca
+							Gavin, Financial Times.</a> <br> -->
+						<br>
+					</p>
 
 
 
-					<h4>Talks / Conferences / Workshops</h4> <br>
+
+
+					<h4 id="talks">Talks / Conferences / Workshops</h4> <br>
 					- very out of date, being updated - <br><br>
 					<b>2019</b><br>
 					&emsp; talk - <a id=show target="_blank" href="https://www.youtube.com/watch?v=edETkt_xtVg">
