--- a/about.html
+++ b/about.html
@@ -225,6 +225,12 @@
 				</p>
 				<br>
 				<div class="border-top"></div>
+
+				<br>
+				<img src="images/about-bio.jpg" class="aboutimg" alt="talks by jake elwes">
+				<img src="images/about-bio2.jpg" class="aboutimg" alt="talks by jake elwes"> <br>
+				<br>
+
 				<p>
 					Currently represented in Europe, Middle East & Asia by:<br>
 					<b><i><a id=show target="_blank"
