--- a/about.html
+++ b/about.html
@@ -219,8 +219,7 @@
 					Museum, Madrid; Ars Electronica, Austria; Zabludowicz Collection, London; Sculpture in the City,
 					London; Science Gallery Dublin; RMIT Gallery, Melbourne; Onassis Foundation, Athens; E-WERK
 					Freiburg, Germany; Museum für Naturkunde, Berlin; Nature Morte, Delhi; Centre for the Future of
-					Intelligence, Cambridge and they have been featured on BBC1’s Kill Your TV - History of Video Art
-					and BBC Radio 4 Front Row (UK) and ZDF aspekte, ARD ttt (DE).
+					Intelligence, Cambridge and they have been featured on ZDF aspekte, ARD ttt (DE), BBC Radio 4 Front Row, and BBC1’s Kill Your TV - History of Video Art (UK).
 
 				</p>
 				<br>
