--- a/about.html
+++ b/about.html
@@ -316,10 +316,12 @@
 					<p>
 						Born 1993, London UK. <br><br>
 
-						<b>Slade School of Fine Art (UCL)</b>, BA (Hons) - Fine Art, 2013 - 2017<br>
+						<b>Slade School of Fine Art (UCL)</b>, BA (Hons) - Fine Art, London, 2013 - 2017<br>
+						<b>Central St Martins (UAL)</b>, Foundation, London, 2012 - 2013<br>
+						<b>School of Machines, Making &amp;
+						Make-Believe</b>, The Neural Aesthetic with Gene Kogan, Berlin, 2016 <br>
 						<b>School of the Art Institute Chicago</b>, International Exchange - Art &amp;
 						Technology, 2015 <br>
-						<b>Central St Martins (UAL)</b>, Foundation, 2012 - 2013<br>
 						<br>
 						<b>Gazelli Art House</b>, 39 Dover Street, London, 2021 - present<br>
 						<b>The Artist Development Agency</b>, Steve Fletcher (formally Carroll / Fletcher Gallery,
@@ -1733,7 +1735,7 @@
 
 
 
-					<h4>Further Qualifications</h4>
+					<!-- <h4>Further Background</h4>
 					<p>
 						<b>‘The Neural Aesthetic - Machine Learning for Artists’</b>, School of Machines, Making &amp;
 						Make-Believe, Berlin, 2016 <br>
@@ -1744,31 +1746,10 @@
 						<b>'Convolutional Neural Networks'</b>, Andrew Ng, Coursera 2018<br>
 						<b>‘Neural Networks and Deep Learning’ (Stanford University)</b>, Andrew Ng, Coursera 2017<br>
 						‘Creative Applications of Deep Learning with TensorFlow’, Kadenze 2016<br>
-						<!-- ‘Java Programming’, London City University 2014<br> -->
-						<!-- ‘Machine Learning’ (Stanford University), Coursera 2016<br> -->
 						<br>
-					</p>
+					</p> -->
 
 
-					<h4>Follow</h4>
-					<p>
-					<ul id="social">
-						<li><a target="_blank" href="https://www.instagram.com/jakeelwes/"
-								class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"
-									style="padding-right: 10px;"></i>Instagram</a></li>
-						<li><a target="_blank" href="https://www.twitter.com/jakeelwes/"
-								class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"
-									style="padding-right: 10px;"></i>Twitter</a></li>
-						<li><a target="_blank" href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i
-									class="fa fa-fw fa-vimeo" style="padding-right: 10px;"></i>Vimeo</a></li>
-						<li><a target="_blank" href="https://www.youtube.com/user/jakeelwes"
-								class="btn-social btn-outline"><i class="fa fa-fw fa-youtube"
-									style="padding-right: 10px;"></i>Linkedin</a></li>
-						<li><a target="_blank" href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact"
-								onmouseover="this.href=this.href.replace(/x/g,'');" target="_top"
-								class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"
-									style="padding-right: 10px;"></i>Email</a></li>
-					</ul><!-- // #social -->
 					</p>
 				</div><!-- // .desktop-6 -->
 
