--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
 
 					Jake Elwes (b.1993, UK) is an artist living and working in London currently working to queer
 					artificial intelligence with drag performers. Having been making art exploring the aesthetics and
-					ethics of machine learning systems since the very first generative models in 2016, their art
+					ethics of machine learning systems since the very first generative AI models in 2016, their art
 					searches for poetry and narrative in the success and failures of digital systems. Across projects
 					that encompass moving-image installation, sound and performance, Jake’s work finds unusual ways of
 					demystifying, mapping and subverting technology. Works include deepfake drag in The Zizi Project,
