--- a/project-sontag.html
+++ b/project-sontag.html
@@ -131,7 +131,7 @@
 					$(resizeDivs);
 					$(window).resize(resizeDivs);
 				</script>
-			<img src="images/project-sontag/Sontag3.jpg" alt="Jake Elwes digital artist" />
+			<!-- <img src="images/project-sontag/Sontag3.jpg" alt="Jake Elwes digital artist" /> -->
 				<br><br>
 				<!-- <video controls autoplay loop  style="width: 100%;">
 				  <source src="images/project-digitalWhisper/whisperTweets2.mov" type="video/mp4">
