--- a/about.html
+++ b/about.html
@@ -168,16 +168,7 @@
 				<p id="bio" style="margin-top:35px;">
 
 
-					Jake Elwes (b.1993, UK) is an artist living and working in London currently working to queer
-					artificial intelligence with drag performers. Having been making art exploring the aesthetics and
-					ethics of machine learning systems since the very first generative AI models in 2016, their art
-					searches for poetry and narrative in the success and failures of digital systems. Across projects
-					that encompass moving-image installation, sound and performance, Jake’s work finds unusual ways of
-					demystifying, mapping and subverting technology. Works include deepfake drag in The Zizi Project,
-					glitching oppressive algorithms in Machine Learning Porn and reframing AI generated marsh birds back
-					into nature with CUSP. Jake’s work also calls for us to challenge who’s building these systems and
-					who (or what) they’re building them for, and whether we as artists and queers can reclaim these
-					technologies to build our own digital utopias.
+					Jake Elwes (b.1993, UK) is an artist living in London currently working to queer artificial intelligence with drag performers. Having been making art exploring the aesthetics and ethics of machine learning systems since the very first generative AI models in 2016, their art searches for poetry and narrative in the successes and failures of digital systems. Across projects that encompass moving-image installation, sound and performance, Jake’s work finds unusual ways of demystifying, mapping and subverting technology. Works include deepfake drag in The Zizi Project, glitching oppressive algorithms in Machine Learning Porn and reframing AI generated marsh birds back into nature in CUSP. Jake’s work also calls for us to challenge who is building these systems and who (or what) they’re building them for, and whether we as artists and queers can reclaim these technologies to build our own digital utopias.
 
 
 
