--- a/about.html
+++ b/about.html
@@ -151,13 +151,14 @@
 					<li><a href="#bio" class="anchor">Artist Bio</a></li>
 					<li><a href="#background" class="anchor">Background</a></li>
 					<li><a href="#selectedtalks" class="anchor">Selected Talks / Videos</a></li>
-					<li><a href="#currentshows" class="anchor">Current/Upcoming Exhibtions</a></li>
-					<li><a href="#soloshows" class="anchor">Selected Solo Exhibitions and Installations</a></li>
-					<li><a href="#groupshows" class="anchor">Selected Group Exhibitions and Projects</a></li>
+					<li><a href="#currentshows" class="anchor">Current / Upcoming Exhibtions</a></li>
+					<li><a href="#soloshows" class="anchor">Selected Solo Exhibitions &amp; Installations</a></li>
+					<li><a href="#groupshows" class="anchor">Selected Group Exhibitions &amp; Projects</a></li>
 					<li><a href="#performances" class="anchor">Performances</a></li>
 					<li><a href="#prizes" class="anchor">Prizes &amp; Collections</a></li>
 					<li><a href="#press" class="anchor">Articles / Press / TV</a></li>
-					<li><a href="#pub" class="anchor">Research - Publications / Book / Interviews / Academia</a></li>
+					<li><a href="#pub" class="anchor">Research Publications</a></li>
+					<li><a href="#pub" class="anchor">Interviews</a></li>
 					<li><a href="#talks" class="anchor">Talks / Conferences / Workshops</a></li>
 
 				</ul>
@@ -1472,7 +1473,7 @@
 					</p>
 
 
-					<h4 id="pub">Publications, Books, Research &amp; Academia</h4>
+					<h4 id="pub">Research Publications</h4>
 					<p>
 						- being updated -
 
